--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,20 +5,20 @@
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ page.title }}">
-    <link rel="icon" type="image/png" href="/assets/img/icon.png">
+    <link rel="icon" type="image/png" href="{{ "/assets/img/icon.png" | relative_url }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Noto+Sans&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/assets/css/MyFontsWebfontsKit.css">
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/css/MyFontsWebfontsKit.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 </head>
 <body>
 <div class="content-wrapper">
 <div class="content">
     {{ content }}
 
-    <img src="/assets/img/divider.png" class="divider" alt="">
+    <img src="{{ "/assets/img/divider.png" | relative_url }}" class="divider" alt="">
     <div class="footer">
         <div class="links">
             <a href="#">Kontakt</a> · <a href="#">Mamy Prawo</a>
