--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@ body {
     font-family: 'Mulish', sans-serif;
     font-weight: 300;
     background-color: rgb(48, 52, 57);
-    background-image: url(/assets/img/blackboard.jpg);
+    background-image: url(../img/blackboard.jpg);
     background-attachment: fixed;
     color: rgb(240, 240, 240);
 }
