Add more content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,10 @@
     <img src="{{ "/assets/img/divider.png" | relative_url }}" class="divider" alt="">
     <div class="footer">
         <div class="links">
-            <a href="#">Kontakt</a> · <a href="#">Mamy Prawo</a>
+            <a href="mailto:teczowelekcje@gmail.com">Kontakt</a> <!-- · <a href="#">Mamy Prawo</a> -->
         </div>
         <div class="licence">
-            <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.pl">Pewne prawa zastrzeżone (Creative Commons BY-SA)</a>
+            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.pl">Pewne prawa zastrzeżone (Creative Commons BY-NC-SA)</a>
         </div>
     </div>
 </div>
