--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -72,8 +72,12 @@ h3 {
 }
 
 .categories {
+    font-size: 18px;
     text-align: center;
     font-family: ChalkHandMarker-Reg, sans-serif;
+    margin: 0 auto;
+    width: 85%;
+    line-height: 1.5em;
 
     a {
         color: deepskyblue;
