--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="{{ page.title }}">
+    <meta name="description" content="Przedstawiamy Wam propozycje lekcji dla szkół średnich na „Tęczowy Piątek” – i na każdy inny dzień w roku. Propozycje te przygotowały_li profesorki i profesorowie uniwersytetów, nauczycielki i nauczyciele, z Polski i z uczelni zagranicznych. Mamy nadzieję, że może się Wam te lekcje spodobają i przydadzą.">
     <link rel="icon" type="image/png" href="{{ "/assets/img/icon.png" | relative_url }}">
     <meta property="og:image" content="{{ "/assets/img/icon.png" | absolute_url }}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
